--- a/about.html
+++ b/about.html
@@ -55,6 +55,7 @@
               <li class="nav-item mx-2 active"><a class="nav-link text-uppercase" href="about.html">About</a></li>
                 <div class="dropdown-menu mt-lg-4" aria-labelledby="navbarDropdownMenuLink"><a class="dropdown-item font-weight-bold text-small" href="index.html">Home</a><a class="dropdown-item font-weight-bold text-small" href="about.html">About</a></div>
               </li>
+              <li class="nav-item mx-2"><a class="nav-link text-uppercase" href="team.html">Team</a></li>
               <li class="nav-item ml-lg-3 pl-lg-3"><a class="btn btn-outline-primary btn-sm" href="https://docs.google.com/forms/d/e/1FAIpQLScM8YYaHCUfUE2aLrftjADLtzIeQ3DShGOFiTXzsVOfvwE2aQ/viewform" target = "_blank">Apply</a></li>
             </ul>
           </div>
@@ -70,6 +71,7 @@
           <ol class="breadcrumb bg-none mb-0 p-0">
             <li class="breadcrumb-item pl-0"><a href="index.html"> <i class="fas fa-home mr-2"></i>Home</a></li>
             <li class="breadcrumb-item active" aria-current="page">About us</li>
+            <li class="breadcrumb-item pl-0"><a href="team.html"> Team</a></li>
           </ol>
         </nav>
       </div>
@@ -116,7 +118,7 @@
           </div>
         </div>
       </header>
-    <section class="py-5 bg-light">
+    <section class="py-3 bg-light">
       <div class="container py-5">
         <div class="row align-items-stretch">
           <div class="col-lg-4 mb-4 mb-lg-0">
@@ -128,7 +130,7 @@
               </div>
               <div class="px-5 pt-0 pb-5 bg-white text-center">
                 <h2 class="h4 mb-3">Our mission</h2>
-                <p class="text-muted text-small mb-0">
+                <p class="text-muted text-medium mb-0">
                   Since its inception, HCS has cultivated a community of passionate young technologists and builders, who are hungry to cultivate the next generation of tech. We hope to encourage experimentation and tinkering alongside giving back to the greater Harvard community. 
                 </p>
               </div>
@@ -143,8 +145,8 @@
               </div>
               <div class="px-5 pt-0 pb-5 bg-white text-center">
                 <h2 class="h4 mb-3">Our vision</h2>
-                <p class="text-muted text-small mb-0">
-                  Launched in the summer of 2020, the Builders Incubation Program has been able to help 21 teams realize their vision.
+                <p class="text-muted text-medium mb-0">
+                  Launched in the summer of 2020, the Builders Incubation Program has been able to help 21 teams realize their visions.
                   We hope to give teams the resources and mentorship necessary to transform an idea into a startup.
                 </p>
               </div>
@@ -159,7 +161,9 @@
               </div>
               <div class="px-5 pt-0 pb-5 bg-white text-center">
                 <h2 class="h4 mb-3">What We Do</h2>
-                <p class="text-muted text-small mb-0">Brief overivew of the summer program + equity-free grants</p>
+                <p class="text-muted text-medium mb-0">
+                  This summer, we're hoping to re-lauch the BIP summer program, providing equity-free grants to all of our teams, bringing an impressive line-up of guest speakers, and also 
+                  curating personalized mentors for each team. We're hoping to keep the 2021 cohort small (~10 teams).</p>
               </div>
             </div>
           </div>
@@ -168,7 +172,7 @@
     </section>
 
     <div class="container py-5">
-      <header class="mb-5 text-center">
+      <header class="mb-2 text-center">
         <div class="row">
           <div class="col-lg-7 mx-auto">
             <h2>Notable Speakers</h2>
@@ -177,12 +181,12 @@
       </header>
 
     <section class="py-5 bg-light">
-      <div class="container py-5">
+      <div class="container py-3">
         <div class="row align-items-stretch">
-          <div class="col-lg-4 mb-4 mb-lg-0">
+          <div class="col-lg-4 mb-2 mb-lg-0">
             <div class="bg-white h-100">
               <div class="px-5 pt-0 pb-5 bg-white text-center">
-                <h2 class="h4 mb-3">Michael Seibel</h2>
+                <h2 class="h4">Michael Seibel</h2>
                 <p style="color:rgb(219, 47, 47)"> Managing Director at YC</p>
                 <img src="seibel.png" alt="seibel" width="200" height="200">
               </div>
@@ -191,7 +195,7 @@
           <div class="col-lg-4 mb-4 mb-lg-0">
             <div class="bg-white h-100">
               <div class="px-5 pt-0 pb-5 bg-white text-center">
-                <h2 class="h4 mb-3">Ali Partovi</h2>
+                <h2 class="h4">Ali Partovi</h2>
                 <p style="color:rgb(219, 47, 47)"> Co-founder of Code.org </p>
                 <img src="ali.jpg" alt="partovi" width="200" height="200">
               </div>
@@ -200,7 +204,7 @@
           <div class="col-lg-4">
             <div class="bg-white h-100">
               <div class="px-5 pt-0 pb-5 bg-white text-center">
-                <h2 class="h4 mb-3">Baris Akis</h2>
+                <h2 class="h4">Baris Akis</h2>
                 <p style="color:rgb(219, 47, 47)"> President of Human Capital</p>
                 <img src="baris.jpeg" alt="akis" width="200" height="200">
               </div>
@@ -215,21 +219,39 @@
         <div class="row">
           <div class="col-lg-12 mb-5 ">
             <div class="accordion" id="accordionExample">
-              <div class="card rounded-0 border-0 mb-1">
+              <div class="card rounded-0 border-0">
                 <div class="card-header p-0 border-0 bg-white rounded-0" id="headingOne">
-                  <h6 class="mb-0"><a class="reset-anchor w-100 px-4 py-3 d-block" data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <h6 class="mb-0"><a class="reset-anchor w-100 px-4 py-3 d-block collapsed" data-toggle="collapse" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                       What are the requirements for applying?
                       </a></h6>
                 </div>
-                <div class="collapse show" id="collapseOne" aria-labelledby="headingOne" data-parent="#accordionExample">
+                <div class="collapse" id="collapseOne" aria-labelledby="headingOne" data-parent="#accordionExample">
                   <div class="card-body">
-                    <p class="text-small text-muted">
+                    <p class="text-medium text-muted">
                       In order to apply for BIP, at least one member of your team must be a current Harvard College student.
                     </p>
                   </div>
                 </div>
               </div>
-              <div class="card rounded-0 border-0 mb-1">
+
+              <div class="card rounded-0 border-0">
+                <div class="card-header p-0 border-0 bg-white rounded-0" id="headingOneB">
+                  <h6 class="mb-0"><a class="reset-anchor w-100 px-4 py-3 d-block collapsed" data-toggle="collapse" href="#collapseOneB" aria-expanded="false" aria-controls="collapseOneB">
+                      When is the application due? What is the application process like?
+                      </a></h6>
+                </div>
+                <div class="collapse" id="collapseOneB" aria-labelledby="headingOneB" data-parent="#accordionExample">
+                  <div class="card-body">
+                    <p class="text-medium text-muted">
+                      The application is due June 22 at 11:59 PST. Virtual will be conducted on a rolling basis. Applicants will be notified before June 26 about the status of their application.
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+
+
+              <div class="card rounded-0 border-0">
                 <div class="card-header p-0 border-0 bg-white rounded-0" id="headingTwo">
                   <h6 class="mb-0"><a class="reset-anchor w-100 px-4 py-3 d-block collapsed" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                       What are the program start/end dates?
@@ -237,12 +259,13 @@
                 </div>
                 <div class="collapse" id="collapseTwo" aria-labelledby="headingTwo" data-parent="#accordionExample">
                   <div class="card-body">
-                    <p class="text-small text-muted">
-                      The program is 7 weeks long and will start June 22 and end on August 8.
+                    <p class="text-medium text-muted">
+                      The program is 6 weeks long and will run from June 28 to August 13.
                     </p>
                   </div>
                 </div>
               </div>
+
               <div class="card rounded-0 border-0">
                 <div class="card-header p-0 border-0 bg-white rounded-0" id="headingThree">
                   <h6 class="mb-0"><a class="reset-anchor w-100 px-4 py-3 d-block collapsed border-bottom" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -251,7 +274,7 @@
                 </div>
                 <div class="collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#accordionExample">
                   <div class="card-body">
-                    <p class="text-small text-muted">
+                    <p class="text-medium text-muted">
                       Students will receive equity free grants that can go towards any project expenses. 
                       Common expenses include domain and hosting, data storage, app store fees, or marketing costs. 
                       More funding guidelines can be found <a href="https://docs.google.com/document/d/1VTqchtarGzcBPf5VWxBJlRpu9xSO1EefXI1KvMx6B24/edit?usp=sharing">here</a>.
@@ -268,7 +291,7 @@
                 </div>
                 <div class="collapse" id="collapseFour" aria-labelledby="headingFour" data-parent="#accordionExample">
                   <div class="card-body">
-                    <p class="text-small text-muted">
+                    <p class="text-medium text-muted">
                       Fill out our application form <a href="https://docs.google.com/forms/d/e/1FAIpQLScM8YYaHCUfUE2aLrftjADLtzIeQ3DShGOFiTXzsVOfvwE2aQ/viewform">here</a>! Applications are due by June 15, 2021 at 11:59 PST.
                     </p>
                   </div>
