--- a/contact.html
+++ b/contact.html
@@ -52,6 +52,7 @@
               <li class="nav-item mx-2"><a class="nav-link text-uppercase" href="about.html">About</a></li>
                 <div class="dropdown-menu mt-lg-4" aria-labelledby="navbarDropdownMenuLink"><a class="dropdown-item font-weight-bold text-small" href="index.html">Home</a><a class="dropdown-item font-weight-bold text-small" href="about.html">About</a><a class="dropdown-item font-weight-bold text-small" href="contact.html">Contact                </a></div>
               </li>
+              <li class="nav-item mx-2"><a class="nav-link text-uppercase" href="team.html">Team</a></li>
               <li class="nav-item ml-lg-3 pl-lg-3"><a class="btn btn-outline-primary btn-sm" href="https://docs.google.com/forms/d/e/1FAIpQLScM8YYaHCUfUE2aLrftjADLtzIeQ3DShGOFiTXzsVOfvwE2aQ/viewform" target = "_blank">Apply</a></li>
             </ul>
           </div>
