--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
               <li class="nav-item mx-2"><a class="nav-link text-uppercase" href="about.html">About</a></li>
                 <div class="dropdown-menu mt-lg-4" aria-labelledby="navbarDropdownMenuLink"><a class="dropdown-item font-weight-bold text-small" href="index.html">Home</a><a class="dropdown-item font-weight-bold text-small" href="about.html">About</a><a class="dropdown-item font-weight-bold text-small" href="contact.html">Contact                </a></div>
               </li>
+              <li class="nav-item mx-2"><a class="nav-link text-uppercase" href="team.html">Team</a></li>
               <li class="nav-item ml-lg-3 pl-lg-3"><a class="btn btn-outline-primary btn-sm" href="https://docs.google.com/forms/d/e/1FAIpQLScM8YYaHCUfUE2aLrftjADLtzIeQ3DShGOFiTXzsVOfvwE2aQ/viewform" target = "_blank">Apply</a></li>
             </ul>
           </div>
@@ -180,7 +181,7 @@
         <header class="mb-5">
           <div class="row">
             <div class="col-lg-7 mx-auto">
-              <p class="h6 text-uppercase text-primary mb-0">2020 Program</p>
+              <p class="h6 text-uppercase text-primary mb-3">2020 Program</p>
               <h2>Featured Projects</h2>
             </div>
           </div>
@@ -192,8 +193,9 @@
                 <use xlink:href="#laptop-screen-1"> </use>
               </svg> -->
               <img class="img-fluid" width ="130" src="img/finary.jpeg" alt="">
-              <h3 class="h5">Finary</h3>
-              <p class="text-small mb-0 text-muted">Finary is a social investing platform building group chats for Gen Z. You can chat with friends about your portfolio, discover new investing communities, and make trades with your brokerage.
+              <h3 class="h5 mb-3"><a href="https://about.finary.io/">Finary</a></h3>
+              <p class="text-medium mb-0 text-muted">Finary is a social investing platform building group chats for Gen Z. 
+                After participating in the 2020 Builder's Incubation Program, Finary was accepted into Y Combinators W20 cohort.
               </p>
             </div>
           </div>
@@ -203,8 +205,9 @@
                 <use xlink:href="#quality-1"> </use>
               </svg> -->
               <img class="img-fluid" width ="130" src="img/congregate.jpeg" alt="">
-              <h3 class="h5">Congregate</h3>
-              <p class="text-small mb-0 text-muted">Congregate is an online events platform that brings the spontaneity of in-person networking events and social gatherings online. Users can seamlessly jump between conversations, hear neighboring conversations, and get matched with attendees of similar interests.
+              <h3 class="h5 mb-3"> <a href = "https://www.congregate.live/">Congregate</a></h3>
+              <p class="text-medium mb-0 text-muted">Congregate is an online events platform that brings the spontaneity of in-person networking events and social gatherings online. 
+                After launching in BIP, Congregate was able to amass over 30,000+ users worldwide. 
               </p>
             </div>
           </div>
@@ -214,8 +217,8 @@
                 <use xlink:href="#survey-1"> </use>
               </svg> -->
               <img class="img-fluid" width ="130" src="img/rem.png" alt="">
-              <h3 class="h5">rem</h3>
-              <p class="text-small mb-0 text-muted">Rem is obsessed with helping our users make an impact on society’s most pressing issues. Our goal is to serve as an all-encompassing digital ecosystem for charitable giving, allowing users to discover new charities, learn more about causes they already care about.</p>
+              <h3 class="h5 mb-3"><a href="https://medium.com/hcs-builders-incubation-program/rem-introducing-our-team-and-our-story-32d929406044"> rem</a></h3>
+              <p class="text-medium mb-0 text-muted">Rem helps users make an impact on society’s most pressing issues by allowing users to discover new charities and learn more about causes they already care about.</p>
             </div>
           </div>
           <!-- <div class="col-lg-4 col-md-6 mb-4">
@@ -256,7 +259,7 @@
             <div class="row align-items-center">
               <div class="col-lg-7 text-center text-lg-left mb-4 mb-lg-0">
                 <h2 class="text-white mb-2">Apply for the 2021 program today!</h2>
-                <p class="text-white mb-0">Applications are due June 8.</p>
+                <p class="text-white mb-0">Applications are due June 22 at 11:59 PST.</p>
               </div>
               <div class="col-lg-3 ml-auto text-center text-lg-right"><a class="btn btn-outline-light" href="https://docs.google.com/forms/d/e/1FAIpQLScM8YYaHCUfUE2aLrftjADLtzIeQ3DShGOFiTXzsVOfvwE2aQ/viewform" target = "_blank">Apply</a></div>
             </div>
