--- a/team.html
+++ b/team.html
@@ -138,11 +138,11 @@
             <div class="bg-white h-100">
               <div class="px-5 pt-0 pb-5 bg-white text-center">
                 <h2 class="h3"></h2>
-                <img src="Rakesh.jpg" alt="rakesh" width="200" height="200">
+                <img src="Rakesh.jpeg" alt="rakesh" width="200" height="200">
                 <h2 class="h2"></h2>
                 <h2 class="h4">Rakesh Nori</h2>
                 <p style="color:rgb(219, 47, 47)"> Co-Director </p>
-                <p> Rakesh is a sophomore at Harvard from San Jose, California studying Computer Science and Statistics. </p>
+                <p> Rakesh is a sophomore at Harvard from San Jose, CA studying CS + Stats. Rakesh seeks to pursue entrepreneurship and build in a new spaces that are ripe for innovation and social impact. Through BIP, Rakesh seeks to help cultivate a thriving entrepreneurial community at Harvard in which students are encouraged to take risks pursuing projects that inspire them.  </p>
               </div>
             </div>
           </div>
