--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="dropdown-menu mt-lg-4" aria-labelledby="navbarDropdownMenuLink"><a class="dropdown-item font-weight-bold text-small" href="index.html">Home</a><a class="dropdown-item font-weight-bold text-small" href="about.html">About</a><a class="dropdown-item font-weight-bold text-small" href="contact.html">Contact                </a></div>
               </li>
               <li class="nav-item mx-2"><a class="nav-link text-uppercase" href="team.html">Team</a></li>
-              <li class="nav-item ml-lg-3 pl-lg-3"><a class="btn btn-outline-primary btn-sm" href="https://docs.google.com/forms/d/e/1FAIpQLScM8YYaHCUfUE2aLrftjADLtzIeQ3DShGOFiTXzsVOfvwE2aQ/viewform" target = "_blank">Apply</a></li>
+              <li class="nav-item ml-lg-3 pl-lg-3"><a class="btn btn-outline-primary btn-sm" href="https://forms.gle/ncHazN6B1795vCRa9" target = "_blank">Apply</a></li>
             </ul>
           </div>
         </div>
@@ -69,11 +69,11 @@
         <div class="hero-slide bg-size bg-center py-5" style="background: url(img/maroon-banner.jpeg)">
           <div class="container text-white py-5 index-forward">
             <div class="row">
-              <div class="col-lg-7">
+              <div class="col-lg-9">
                 <h1>Want to take your idea to the next level?</h1>
-                <p class="lead">Applications open for the 2021 Builders Incubation Program!</p>
+                <p class="lead">Applications open soon for the 2022 Builders Incubation Program!</p>
                 <ul class="list-inline">
-                  <li class="list-inline-item"><a class="btn btn-primary" href="https://docs.google.com/forms/d/e/1FAIpQLScM8YYaHCUfUE2aLrftjADLtzIeQ3DShGOFiTXzsVOfvwE2aQ/viewform" target = "_blank">Apply</a></li>
+                  <li class="list-inline-item"><a class="btn btn-primary" href="https://forms.gle/PxR5vicEFzxuWb68A" target = "_blank">Get Notified</a></li>
                   <li class="list-inline-item"><a class="btn btn-outline-light" href="about.html">Learn More</a></li>
                 </ul>
               </div>
@@ -147,23 +147,23 @@
       <div class="bg-primary py-5 text-white">
         <div class="container">
           <div class="row">
-            <div class="col-sm-4 mb-4 mb-lg-0">
+            <div class="col-sm-3 mb-4 mb-lg-0">
               <div class="d-flex align-items-center">
-                <h6 class="h1 mb-0">21</h6>
-                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Teams</p>
+                <h6 class="h1 mb-0">2</h6>
+                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Cohorts</p>
               </div>
             </div>
             
-            <div class="col-sm-4 mb-4 mb-lg-0">
+            <div class="col-sm-3 mb-4 mb-lg-0">
               <div class="d-flex align-items-center">
-                <h6 class="h1 mb-0">8</h6>
-                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Weeks</p>
+                <h6 class="h1 mb-0">29</h6>
+                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Student Teams</p>
               </div>
             </div>
-            <div class="col-sm-4 mb-4 mb-lg-0">
+            <div class="col-sm-6 mb-4 mb-lg-0">
               <div class="d-flex align-items-center">
-                <h6 class="h1 mb-0">$5000</h6>
-                <p class="ml-3 flex-grow-1 text-uppercase mb-0">In Equity-Free Grants</p>
+                <h6 class="h1 mb-0">$12,000+</h6>
+                <p class="ml-3 flex-grow-1 text-uppercase mb-0">Provided In Equity-Free Grants</p>
               </div>
             </div>
             <!-- <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
@@ -175,82 +175,125 @@
         </div>
       </div>
     </section>
-    <!-- Services Section -->
+
+
     <section class="py-5">
-      <div class="container py-5 text-center">
+      <div class="container py-1 text-center">
         <header class="mb-5">
           <div class="row">
             <div class="col-lg-7 mx-auto">
-              <p class="h6 text-uppercase text-primary mb-3">2020 Program</p>
               <h2>Featured Projects</h2>
+            </div>
+          </div>
+        </header>
+        <header class="mb-3">
+          <div class="row">
+            <div class="col-lg-7 mx-auto">
+              <p class="h4 text-uppercase text-primary mb-3">2021 Program</p>
             </div>
           </div>
         </header>
         <div class="row align-items-stretch">
           <div class="col-lg-4 col-md-6 mb-4">
-            <div class="px-4 py-5 border border-width-md border-dash h-100">
+            <div class="px-4 py-5 border border-width-md border-dash h-90">
+              <!-- <svg class="svg-icon mb-4 text-primary svg-icon-light svg-icon-big">
+                <use xlink:href="#laptop-screen-1"> </use>
+              </svg> -->
+              <img class="img-fluid" width ="130" src="img/Zesti.png" alt="">
+              <h2></h2>
+              <h3 class="h5 mb-3"><a href="https://www.zestiharvard.com/#/">Zesti</a></h3>
+              <p class="text-medium mb-0 text-muted"> Zesti is a platform that improves the dating app by allowing college students to 
+                affordably find matches while supporting local businesses.
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="px-4 py-5 border border-width-md border-dash h-90">
+              <!-- <svg class="svg-icon mb-4 text-primary svg-icon-light svg-icon-big">
+                <use xlink:href="#quality-1"> </use>
+              </svg> -->
+              <img class="img-fluid" width ="130" src="img/MM.jpg" alt="">
+              <h2></h2>
+              <h3 class="h5 mb-3"> <a href = "https://www.waitlist.missionmentor.org/">Mission: Mentor</a></h3>
+              <p class="text-medium mb-0 text-muted"> Mission: Mentor is an edtech nonprofit building a free, virtual college counselor for high school students.
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="px-4 py-5 border border-width-md border-dash h-90">
+              <!-- <svg class="svg-icon mb-4 text-primary svg-icon-light svg-icon-big">
+                <use xlink:href="#survey-1"> </use>
+              </svg> -->
+              <img class="img-fluid" width ="130" src="img/craze.jpeg" alt="">
+              <h2></h2>
+              <h3 class="h5 mb-3"><a href="https://twitter.com/thecrazeapp"> Craze </a></h3>
+              <p class="text-medium mb-0 text-muted">Craze is a sports social app where users can have fun sports banter, 
+                make no-money predictions and earn real-money rewards</p>
+            </div>
+          </div>
+        </div>
+        
+        <div class="col-lg-7 mx-auto">
+          <h3 class="h5 mb-1"><a href="https://docs.google.com/document/d/12IYtgW87fUiv2GhWAcnLDZZPILgFdDWR8NbJite9qiE/edit?usp=sharing"> Full list of 2021 BIP teams. </a></h3>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- 2020 Program -->
+    <section class="py-1">
+      <div class="container py-5 text-center">
+        <header class="mb-3">
+          <div class="row">
+            <div class="col-lg-7 mx-auto">
+              <p class="h4 text-uppercase text-primary mb-3">2020 Program</p>
+            </div>
+          </div>
+        </header>
+        <div class="row align-items-stretch">
+          <div class="col-lg-4 col-md-6 mb-4">
+            <div class="px-4 py-5 border border-width-md border-dash h-90">
               <!-- <svg class="svg-icon mb-4 text-primary svg-icon-light svg-icon-big">
                 <use xlink:href="#laptop-screen-1"> </use>
               </svg> -->
               <img class="img-fluid" width ="130" src="img/finary.jpeg" alt="">
-              <h3 class="h5 mb-3"><a href="https://about.finary.io/">Finary</a></h3>
-              <p class="text-medium mb-0 text-muted">Finary is a social investing platform building group chats for Gen Z. 
+              <h2></h2>
+              <h3 class="h5 mb-3"><a href="https://about.finary.io/">Finary (YC W20) </a></h3>
+              <p class="text-medium mb-0 text-muted">Finary is a messaging platform for investors to discuss investments and share trades. 
                 After participating in the 2020 Builder's Incubation Program, Finary was accepted into Y Combinators W20 cohort.
               </p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 mb-4">
-            <div class="px-4 py-5 border border-width-md border-dash h-100">
+            <div class="px-4 py-5 border border-width-md border-dash h-90">
               <!-- <svg class="svg-icon mb-4 text-primary svg-icon-light svg-icon-big">
                 <use xlink:href="#quality-1"> </use>
               </svg> -->
               <img class="img-fluid" width ="130" src="img/congregate.jpeg" alt="">
+              <h2></h2>
               <h3 class="h5 mb-3"> <a href = "https://www.congregate.live/">Congregate</a></h3>
-              <p class="text-medium mb-0 text-muted">Congregate is an online events platform that brings the spontaneity of in-person networking events and social gatherings online. 
+              <p class="text-medium mb-0 text-muted">Congregate is an online events platform that brings the spontaneity of in-person events and social gatherings online. 
                 After launching in BIP, Congregate was able to amass over 30,000+ users worldwide. 
               </p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 mb-4">
-            <div class="px-4 py-5 border border-width-md border-dash h-100">
+            <div class="px-4 py-5 border border-width-md border-dash h-90">
               <!-- <svg class="svg-icon mb-4 text-primary svg-icon-light svg-icon-big">
                 <use xlink:href="#survey-1"> </use>
               </svg> -->
               <img class="img-fluid" width ="130" src="img/rem.png" alt="">
-              <h3 class="h5 mb-3"><a href="https://medium.com/hcs-builders-incubation-program/rem-introducing-our-team-and-our-story-32d929406044"> rem</a></h3>
-              <p class="text-medium mb-0 text-muted">Rem helps users make an impact on society’s most pressing issues by allowing users to discover new charities and learn more about causes they already care about.</p>
+              <h2></h2>
+              <h3 class="h5 mb-3"><a href="https://medium.com/hcs-builders-incubation-program/rem-introducing-our-team-and-our-story-32d929406044"> Rem </a></h3>
+              <p class="text-medium mb-0 text-muted">Rem is a new way to give back online: it helps users make an impact on society’s most pressing issues by allowing users to discover new charities
+                 and learn more about causes they already care about.</p>
             </div>
           </div>
-          <!-- <div class="col-lg-4 col-md-6 mb-4">
-            <div class="px-4 py-5 border border-width-md border-dash h-100">
-              <svg class="svg-icon mb-4 text-primary svg-icon-light svg-icon-big">
-                <use xlink:href="#pie-chart-1"> </use>
-              </svg>
-              <h3 class="h5"></h3>
-              <p class="text-small mb-0 text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="px-4 py-5 border border-width-md border-dash h-100">
-              <svg class="svg-icon mb-4 text-primary svg-icon-light svg-icon-big">
-                <use xlink:href="#pay-1"> </use>
-              </svg>
-              <h3 class="h5">Banking &amp; Capital Markets</h3>
-              <p class="text-small mb-0 text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="px-4 py-5 border border-width-md border-dash h-100">
-              <svg class="svg-icon mb-4 text-primary svg-icon-light svg-icon-big">
-                <use xlink:href="#stack-1"> </use>
-              </svg>
-              <h3 class="h5">Modern &amp; Tribe Workplace</h3>
-              <p class="text-small mb-0 text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.</p>
-            </div>
-          </div> -->
         </div>
       </div>
     </section>
+
+
     <!-- Divider Section -->
     <section class="bg-cover bg-center" style="background: url(img/hero-banner-2.jpg)">
       <div class="primary-overlay py-5">
@@ -258,10 +301,10 @@
           <div class="container">
             <div class="row align-items-center">
               <div class="col-lg-7 text-center text-lg-left mb-4 mb-lg-0">
-                <h2 class="text-white mb-2">Apply for the 2021 program today!</h2>
-                <p class="text-white mb-0">Applications are due June 22 at 11:59 PST.</p>
+                <h2 class="text-white mb-2">Get notified about BIP 2022.</h2>
+                <p class="text-white mb-0">Applications will open late May.</p>
               </div>
-              <div class="col-lg-3 ml-auto text-center text-lg-right"><a class="btn btn-outline-light" href="https://docs.google.com/forms/d/e/1FAIpQLScM8YYaHCUfUE2aLrftjADLtzIeQ3DShGOFiTXzsVOfvwE2aQ/viewform" target = "_blank">Apply</a></div>
+              <div class="col-lg-3 ml-auto text-center text-lg-right"><a class="btn btn-outline-light" href="https://forms.gle/ncHazN6B1795vCRa9" target = "_blank">Join Mailing List</a></div>
             </div>
           </div>
         </div>
