--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
           </div>
         </div>
       </header>
-    <section class="py-3 bg-light">
+    <section class="py-1 bg-light">
       <div class="container py-5">
         <div class="row align-items-stretch">
           <div class="col-lg-4 mb-4 mb-lg-0">
@@ -146,7 +146,7 @@
               <div class="px-5 pt-0 pb-5 bg-white text-center">
                 <h2 class="h4 mb-3">Our vision</h2>
                 <p class="text-muted text-medium mb-0">
-                  Launched in the summer of 2020, the Builders Incubation Program has been able to help 21 teams realize their visions.
+                  Launched in the summer of 2020, the Builders Incubation Program has been able to help 29 student startup teams realize their visions.
                   We hope to give teams the resources and mentorship necessary to transform an idea into a startup.
                 </p>
               </div>
@@ -162,8 +162,8 @@
               <div class="px-5 pt-0 pb-5 bg-white text-center">
                 <h2 class="h4 mb-3">What We Do</h2>
                 <p class="text-muted text-medium mb-0">
-                  This summer, we're hoping to re-lauch the BIP summer program, providing equity-free grants to all of our teams, bringing an impressive line-up of guest speakers, and also 
-                  curating personalized mentors for each team. We're hoping to keep the 2021 cohort small (~10 teams).</p>
+                  This summer, we're hoping to re-lauch the 3rd iteration of the BIP summer program by providing equity-free grants to all of our teams, bringing an impressive line-up of guest speakers, and also 
+                  curating personalized mentors for each team.</p>
               </div>
             </div>
           </div>
@@ -186,27 +186,32 @@
           <div class="col-lg-4 mb-2 mb-lg-0">
             <div class="bg-white h-100">
               <div class="px-5 pt-0 pb-5 bg-white text-center">
+                <img src="seibel.png" alt="seibel" width="200" height="200">
+                <h2 class="h2"></h2>
                 <h2 class="h4">Michael Seibel</h2>
                 <p style="color:rgb(219, 47, 47)"> Managing Director at YC</p>
-                <img src="seibel.png" alt="seibel" width="200" height="200">
               </div>
             </div>
           </div>
           <div class="col-lg-4 mb-4 mb-lg-0">
             <div class="bg-white h-100">
               <div class="px-5 pt-0 pb-5 bg-white text-center">
+                
+                <img src="ali.jpg" alt="partovi" width="200" height="200">
+                <h2 class="h2"></h2>
                 <h2 class="h4">Ali Partovi</h2>
                 <p style="color:rgb(219, 47, 47)"> Co-founder of Code.org </p>
-                <img src="ali.jpg" alt="partovi" width="200" height="200">
               </div>
             </div>
           </div>
           <div class="col-lg-4">
             <div class="bg-white h-100">
               <div class="px-5 pt-0 pb-5 bg-white text-center">
+                
+                <img src="baris.jpeg" alt="akis" width="200" height="200">
+                <h2 class="h2"></h2>
                 <h2 class="h4">Baris Akis</h2>
                 <p style="color:rgb(219, 47, 47)"> President of Human Capital</p>
-                <img src="baris.jpeg" alt="akis" width="200" height="200">
               </div>
             </div>
           </div>
